second commit gammes

--- a/020416.html
+++ b/020416.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>CraftLearning</title>
+    <link type="text/css" rel="stylesheet" href="020416.css">
     <h1>CraftLearning</h1>
   </head>
   <body>
+    <div class="block">
+<img src="logo.png" alt="CraftLearning" />
+    </div>
+
+    <div class="block">
+
+    </div>
 
   </body>
 </html>
