--- a/020416.html
+++ b/020416.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <header>
     <meta charset="utf-8">
     <title>CraftLearning</title>
     <link type="text/css" rel="stylesheet" href="020416.css">
-    <h1>CraftLearning</h1>
-  </head>
+
+  </header>
   <body>
-    <div class="block">
+
+<h1>CraftLearning</h1>
+    <div id="block">
 <img src="logo.png" alt="CraftLearning" />
     </div>
 
+
     <div class="block">
 
     </div>
-
+<footer>Created By Amen Allah</footer>
   </body>
+
 </html>
