--- a/020416.html
+++ b/020416.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <header>
+  <head>
     <meta charset="utf-8">
     <title>CraftLearning</title>
     <link type="text/css" rel="stylesheet" href="020416.css">
 
-  </header>
+  </head>
   <body>
+    <header class="navbar">
+    		<ul id="nav">
+    			<li><a href="#">ACCUEIL</a></li>
+    			<li><a href="#">FILMS</a></li>
+    			<li><a href="#">SERIES</a></li>
+    			<li><a href="#">MONGA</a></li>
+    		</ul>
+    	</header>
 
-<h1>CraftLearning</h1>
     <div id="block">
-<img src="logo.png" alt="CraftLearning" />
+<img src="logo.png" />
     </div>
 
 
