--- a/020416.html
+++ b/020416.html
@@ -3,27 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>CraftLearning</title>
-    <link type="text/css" rel="stylesheet" href="020416.css">
+    <link type="text/css" rel="stylesheet" href="css/020416.css">
+<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
 
   </head>
-  <body>
-    <header class="navbar">
-    		<ul id="nav">
-    			<li><a href="#">ACCUEIL</a></li>
-    			<li><a href="#">FILMS</a></li>
-    			<li><a href="#">SERIES</a></li>
-    			<li><a href="#">MONGA</a></li>
+  <body >
+    <header class="navbar navbar-default navbar-fixed-top">
+<div class="navbar-brand">
+<img src="images/logo.png" /></div>
+<div class="navbar-collapse collapse"  id="navbar-main"
+    		<ul class="nav navbar-nav">
+    			<li><a href="#">Accueil</a></li>
+    			<li><a href="#">Ordinateurs & Tablettes</a></li>
+    			<li><a href="#">Téléphonie</a></li>
+    			<li><a href="#">Impression & Copieurs</a></li>
+          <li><a href="#">Electroménager</a></li>
+          <li><a href="#">Réseau & Sécurité</a></li>
+          <li><a href="#">Bureautique</a></li>
+          <li><a href="#">Accessoires</a></li>
     		</ul>
+
     	</header>
+<img src="images/1.png" id="bg"></img>
 
-    <div id="block">
-<img src="logo.png" />
-    </div>
-
-
-    <div class="block">
-
-    </div>
 <footer>Created By Amen Allah</footer>
   </body>
 
