--- a/020416.html
+++ b/020416.html
@@ -4,29 +4,34 @@
     <meta charset="utf-8">
     <title>CraftLearning</title>
     <link type="text/css" rel="stylesheet" href="css/020416.css">
-<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
 
   </head>
   <body >
-    <header class="navbar navbar-default navbar-fixed-top">
-<div class="navbar-brand">
-<img src="images/logo.png" /></div>
-<div class="navbar-collapse collapse"  id="navbar-main"
-    		<ul class="nav navbar-nav">
-    			<li><a href="#">Accueil</a></li>
-    			<li><a href="#">Ordinateurs & Tablettes</a></li>
-    			<li><a href="#">Téléphonie</a></li>
-    			<li><a href="#">Impression & Copieurs</a></li>
-          <li><a href="#">Electroménager</a></li>
-          <li><a href="#">Réseau & Sécurité</a></li>
-          <li><a href="#">Bureautique</a></li>
-          <li><a href="#">Accessoires</a></li>
+
+    <header >
+<div>
+<img src="images/unnamed.png" style="float:left" />
+</div>
+<div>
+    		<ul>
+    			<li><a href="020416.html">Accueil</a></li>
+    			<li><a href="pages/ordinateur.html">Ordinateurs & Tablettes</a></li>
+    			<li><a href="pages/telephonies.html">Téléphonie</a></li>
+    			<li><a href="pages/impression.html">Impression & Copieurs</a></li>
+          <li><a href="pages/electromenager.html">Electroménager</a></li>
+          <li><a href="pages/reseaux.html">Réseau & Sécurité</a></li>
+          <li><a href="pages/bureautique.html">Bureautique</a></li>
+          <li><a href="pages/accessoires.html">Accessoires</a></li>
     		</ul>
 
     	</header>
-<img src="images/1.png" id="bg"></img>
 
-<footer>Created By Amen Allah</footer>
+<!-- <img src="images/1.png" id="bg"></img> -->
+
+</div>
   </body>
+  <footer>Created By Amen Allah &nbsp &nbsp &nbsp   Tel: &nbsp54158286 &nbsp &nbsp &nbsp
+    address: &nbspTunis &nbsp &nbsp &nbsp    Email:&nbspmeftah.amenallah@gmail.com</footer>
+
 
 </html>
