--- a/pages/ordinateur.html
+++ b/pages/ordinateur.html
@@ -2,9 +2,40 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ordinateurs</title>
+    <title>Ordinateurs & Tablettes</title>
+    <link type="text/css" rel="stylesheet" href="../css/020416.css">
   </head>
   <body>
-ordinateurs
+    <header >
+  <div>
+  <img src="../images/unnamed.png" style="float:left" />
+  </div>
+  <div>
+        <ul>
+          <li><a href="../020416.html">Accueil</a></li>
+          <li><a href="ordinateur.html">Ordinateurs & Tablettes</a></li>
+          <li><a href="telephonies.html">Téléphonie</a></li>
+          <li><a href="impression.html">Impression & Copieurs</a></li>
+          <li><a href="electromenager.html">Electroménager</a></li>
+          <li><a href="reseaux.html">Réseau & Sécurité</a></li>
+          <li><a href="bureautique.html">Bureautique</a></li>
+          <li><a href="accessoires.html">Accessoires</a></li>
+        </ul>
+
+      </header>
+      <figure >
+        <img src="../images/pc-portable-asus-.jpg"  />
+        <img src="../images/pc-portable-asus.jpg"  />
+        <img src="../images/pc-portable-dell-inspiron.jpg"  />
+        <img src="../images/pc-portable-hp-.jpg"  />
+        <img src="../images/pc-portable-lenovo.jpg"  />
+        <img src="../images/pc-portable-thinkpad.jpg	"  />
+        <img src="../images/ultrabook-tablette-acer-aspire-switch.jpg"  />
+        <img src="../images/pc-portable-dell-inspiron1.jpg"  />
+        <img src="../images/pc-portable-dell-inspiron-.jpg"  />
+        <img src="../images/pc-portable-lenovo.jpg"  />
+      </div>
   </body>
+<footer>Created By Amen Allah &nbsp &nbsp &nbsp   Tel: &nbsp54158286 &nbsp &nbsp &nbsp
+  address: &nbspTunis &nbsp &nbsp &nbsp    Email:&nbspmeftah.amenallah@gmail.com</footer>
 </html>
