ajout des nouvelles fonctionnalités de la partie téléphonie

--- a/pages/ordinateur.html
+++ b/pages/ordinateur.html
@@ -24,17 +24,17 @@
 
       </header>
       <figure >
-        <img src="../images/pc-portable-asus-.jpg"  />
-        <img src="../images/pc-portable-asus.jpg"  />
-        <img src="../images/pc-portable-dell-inspiron.jpg"  />
-        <img src="../images/pc-portable-hp-.jpg"  />
-        <img src="../images/pc-portable-lenovo.jpg"  />
-        <img src="../images/pc-portable-thinkpad.jpg	"  />
-        <img src="../images/ultrabook-tablette-acer-aspire-switch.jpg"  />
-        <img src="../images/pc-portable-dell-inspiron1.jpg"  />
-        <img src="../images/pc-portable-dell-inspiron-.jpg"  />
-        <img src="../images/pc-portable-lenovo.jpg"  />
-      </div>
+        <img src="../images/pc/pc-portable-asus-.jpg"  />
+        <img src="../images/pc/pc-portable-asus.jpg"  />
+        <img src="../images/pc/pc-portable-dell-inspiron.jpg"  />
+        <img src="../images/pc/pc-portable-hp-.jpg"  />
+        <img src="../images/pc/pc-portable-lenovo.jpg"  />
+        <img src="../images/pc/pc-portable-thinkpad.jpg	"  />
+        <img src="../images/pc/ultrabook-tablette-acer-aspire-switch.jpg"  />
+        <img src="../images/pc/pc-portable-dell-inspiron1.jpg"  />
+        <img src="../images/pc/pc-portable-dell-inspiron-.jpg"  />
+        <img src="../images/pc/pc-portable-lenovo.jpg"  />
+      </figure>
   </body>
 <footer>Created By Amen Allah &nbsp &nbsp &nbsp   Tel: &nbsp54158286 &nbsp &nbsp &nbsp
   address: &nbspTunis &nbsp &nbsp &nbsp    Email:&nbspmeftah.amenallah@gmail.com</footer>
