--- a/pages/ordinateur.html
+++ b/pages/ordinateur.html
@@ -1,14 +1,13 @@
 
-      <figure >
-        <img src="../images/pc/pc-portable-asus-.jpg"  />
-        <img src="../images/pc/pc-portable-asus.jpg"  />
-        <img src="../images/pc/pc-portable-dell-inspiron.jpg"  />
-        <img src="../images/pc/pc-portable-hp-.jpg"  />
-        <img src="../images/pc/pc-portable-lenovo.jpg"  />
-        <img src="../images/pc/pc-portable-thinkpad.jpg	"  />
-        <img src="../images/pc/ultrabook-tablette-acer-aspire-switch.jpg"  />
-        <img src="../images/pc/pc-portable-dell-inspiron1.jpg"  />
-        <img src="../images/pc/pc-portable-dell-inspiron-.jpg"  />
-        <img src="../images/pc/pc-portable-lenovo.jpg"  />
+      <figure class="figure1" >
+        <img class ='img'src="../images/pc/pc-portable-asus-.jpg"  />
+        <img class ='img'src="../images/pc/pc-portable-asus.jpg"  />
+        <img class ='img'src="../images/pc/pc-portable-dell-inspiron.jpg"  />
+        <img class ='img'src="../images/pc/pc-portable-hp-.jpg"  />
+        <img class ='img'src="../images/pc/pc-portable-lenovo.jpg"  />
+        <img class ='img'src="../images/pc/pc-portable-thinkpad.jpg	"  />
+        <img class ='img'src="../images/pc/ultrabook-tablette-acer-aspire-switch.jpg"  />
+        <img class ='img'src="../images/pc/pc-portable-dell-inspiron1.jpg"  />
+        <img class ='img'src="../images/pc/pc-portable-dell-inspiron-.jpg"  />
+        <img class ='img'src="../images/pc/pc-portable-lenovo.jpg"  />
       </figure>
-  
