--- a/pages/telephonies.html
+++ b/pages/telephonies.html
@@ -1,9 +1,9 @@
-  <figure >
-        <img src="../images/telephonie/htc-one-m8-tunisie-couleur-gris.jpg"  />
-        <img src="../images/telephonie/telephone-portable-apple-iphone-6-16-go-gris-sideral.jpg"  />
-        <img src="../images/telephonie/telephone-portable-apple-iphone-6s-64-go-or-rose.jpg"  />
-        <img src="../images/telephonie/telephone-portable-samsung-galaxy-note-5-double-sim-gold.jpg"  />
-        <img src="../images/telephonie/telephone-portable-samsung-galaxy-s6-edge-plus-gold.jpg"  />
-        <img src="../images/telephonie/telephone-portable-samsung-galaxy-s6-edge-plus-noir.jpg	"  />
-        <img src="../images/telephonie/telephone-portable-sony-xperia-z2-etanche-blanc.jpg"  />
+  <figure class="figure1">
+        <img class ='img'src="../images/telephonie/htc-one-m8-tunisie-couleur-gris.jpg"  />
+        <img class ='img'src="../images/telephonie/telephone-portable-apple-iphone-6-16-go-gris-sideral.jpg"  />
+        <img class ='img'src="../images/telephonie/telephone-portable-apple-iphone-6s-64-go-or-rose.jpg"  />
+        <img class ='img'src="../images/telephonie/telephone-portable-samsung-galaxy-note-5-double-sim-gold.jpg"  />
+        <img class ='img'src="../images/telephonie/telephone-portable-samsung-galaxy-s6-edge-plus-gold.jpg"  />
+        <img class ='img'src="../images/telephonie/telephone-portable-samsung-galaxy-s6-edge-plus-noir.jpg	"  />
+        <img class ='img'src="../images/telephonie/telephone-portable-sony-xperia-z2-etanche-blanc.jpg"  />
   </figure>
