--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <header >
 <div>
-<img src="images/technology.png" style="float:left" />
+<img src="images/business (1).png" style="float:left" />
 </div>
 <div>
       <ul>
