--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
     <script src="libs/angular.js"></script>
     <script src="libs/angular-route.js"></script>
     <script src="libs/app.js"></script>
+    <!-- controller -->
+    <script src="controllers\ordinateurController.js">
+    </script>
   </head>
   <header >
 <div>
-<img src="images/business (1).png" style="float:left" />
+
 </div>
-<div>
+<nav class="navbar navbar-collapse navbar-fixed-top">
+
+
       <ul>
+        <li><img src="images/business (1).png" style="float:left;width:50px;height:50px;" /></li>
         <li><a href="#index">Accueil</a></li>
         <li><a href="#ordinateur">Ordinateurs & Tablettes</a></li>
         <li><a href="#telephonies">Téléphonie</a></li>
@@ -25,7 +31,7 @@
         <li><a href="#bureautique">Bureautique</a></li>
         <li><a href="#accessoires">Accessoires</a></li>
       </ul>
-</div>
+</nav>
     </header>
 
 
